Request Types and Methods

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
             } catch(e) {
                 alert('error')
             }
-        }        
+        }  
+        
+        xhr.open("GET", "me.txt", true);
+        xhr.send();
+        
         </script>
     </body>
 </html>
